[gd_scene load_steps=27 format=2]

[ext_resource path="res://World/CameraBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Controllers/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Controllers/CutSceneManager/Stopper.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/EscapePod.png" type="Texture" id=5]
[ext_resource path="res://Levels/Level.tscn" type="PackedScene" id=6]
[ext_resource path="res://Controllers/CutSceneManager/CutSceneManagerLevel25.gd" type="Script" id=7]
[ext_resource path="res://NPC/WingFinal.png" type="Texture" id=8]
[ext_resource path="res://Common/circle.png" type="Texture" id=9]
[ext_resource path="res://Effects/Sprites/LightTexture.png" type="Texture" id=10]
[ext_resource path="res://Controllers/CollisionBoxes/HitBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://Enemies/HornetSpawner.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 191 )

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.259587, 1 )
colors = PoolColorArray( 1, 0.829102, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 600, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -100, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -33.74
radial_accel_random = 1.0
scale = 1.2
scale_random = 1.0
color_ramp = SubResource( 4 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.179487, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.944992, 0.597656, 1, 1, 0.00934601, 0.0184365, 0.341797, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.993103, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 0, 2, 0 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.2
scale_random = 0.3
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="Animation" id=11]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=13]
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 2.05, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 92, 76 ), Vector2( 151, 85 ), Vector2( 151, 85 ), Vector2( 134, 76 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 2.05, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 63.1, 63.1, 0.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "pushShake"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Body/Door:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6, 1.25, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, -19 ), Vector2( -2, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 555, 10 )

[node name="Level_25" instance=ExtResource( 6 )]
mapCoords = Vector2( 6, 2 )
DarkColor = Color( 0.870588, 0.356863, 0.552941, 1 )
UIoff = true
music = "WindAmbient"
musicTransTime = 5.0

[node name="TileMapBG" parent="." index="0"]
tile_data = PoolIntArray( -131065, 3, 3, -65530, 3, 0, -65529, 3, 131079, 6, 3, 65536, 7, 3, 65538, 65542, 3, 65536, 65543, 3, 65538, 131077, 3, 0, 131078, 3, 65545, 131079, 3, 131074, 196612, 3, 0, 196613, 3, 131078, 196614, 3, 65538, 262147, 3, 0, 262148, 3, 131078, 262149, 3, 65541, 262150, 3, 131074, 327682, 3, 0, 327683, 3, 131078, 327684, 3, 65537, 327685, 3, 65538, 393217, 3, 0, 393218, 3, 131078, 393219, 3, 65537, 393220, 3, 65537, 393221, 3, 131077, 393222, 3, 2, 524286, 3, 3, 458752, 3, 0, 458753, 3, 65545, 458754, 3, 131073, 458755, 3, 65544, 458756, 3, 131073, 458757, 3, 65542, 458758, 3, 65538, 589822, 3, 65539, 524288, 3, 65536, 524289, 3, 65538, 524291, 3, 131075, 524293, 3, 131072, 524294, 3, 131074, 655358, 3, 196612, 655359, 3, 6, 589824, 3, 131078, 589825, 3, 262149, 589826, 3, 196610, 720895, 3, 131072, 655360, 3, 131073, 655361, 3, 131074, 917506, 3, 3, 917518, 3, 0, 917519, 3, 2, 983041, 3, 0, 983042, 3, 131079, 983053, 3, 4, 983054, 3, 196614, 983055, 3, 9, 983056, 3, 2, 1048577, 3, 65536, 1048578, 3, 131077, 1048579, 3, 2, 1048588, 3, 0, 1048589, 3, 131079, 1048591, 3, 65536, 1048592, 3, 262149, 1048593, 3, 196609, 1048594, 3, 196610, 1179647, 3, 4, 1114112, 3, 196609, 1114113, 3, 196614, 1114114, 3, 131073, 1114115, 3, 9, 1114116, 3, 2, 1114122, 3, 4, 1114123, 3, 196609, 1114124, 3, 196614, 1114125, 3, 196613, 1114126, 3, 196609, 1114127, 3, 196614, 1114128, 3, 131074, 1245182, 3, 196608, 1245183, 3, 196615, 1179651, 3, 131072, 1179652, 3, 131074, 1179657, 3, 196608, 1179658, 3, 196615 )

[node name="TileMap" parent="." index="1"]
tile_data = PoolIntArray( -131074, 0, 0, -131073, 0, 1, -196608, 0, 1, -196607, 0, 1, -196606, 0, 1, -196605, 0, 1, -196604, 0, 1, -196603, 0, 1, -196602, 0, 2, -65538, 0, 65536, -65537, 0, 65537, -131072, 0, 65537, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65538, -2, 0, 65536, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65541, -65530, 0, 131074, 65534, 0, 65536, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65538, 131070, 0, 65536, 131071, 0, 65537, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65541, 65541, 0, 131074, 196606, 0, 65536, 196607, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65538, 262142, 0, 65536, 262143, 0, 65537, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65541, 196612, 0, 131074, 327678, 0, 65536, 327679, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65541, 262147, 0, 131074, 393214, 0, 65536, 393215, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65538, 458750, 0, 65536, 458751, 0, 65537, 393216, 0, 65541, 393217, 0, 131073, 393218, 0, 131074, 524286, 0, 65536, 524287, 0, 65537, 458752, 0, 65538, 589822, 0, 131072, 589823, 0, 131073, 524288, 0, 131074, 983065, 0, 0, 983066, 0, 1, 983067, 0, 1, 983068, 0, 1, 983069, 0, 1, 983070, 0, 1, 983071, 0, 1, 983072, 0, 1, 983073, 0, 1, 983074, 0, 1, 983075, 0, 1, 983076, 0, 1, 983077, 0, 1, 983078, 0, 1, 983079, 0, 1, 983080, 0, 2, 1048597, 0, 0, 1048598, 0, 1, 1048599, 0, 1, 1048600, 0, 1, 1048601, 0, 131078, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537, 1048606, 0, 65537, 1048607, 0, 65537, 1048608, 0, 65537, 1048609, 0, 65537, 1048610, 0, 65537, 1048611, 0, 65537, 1048612, 0, 65537, 1048613, 0, 65537, 1048614, 0, 65537, 1048615, 0, 65537, 1048616, 0, 131077, 1048617, 0, 2, 1114127, 0, 0, 1114128, 0, 1, 1114129, 0, 1, 1114130, 0, 1, 1114131, 0, 1, 1114132, 0, 1, 1114133, 0, 131078, 1114134, 0, 65537, 1114135, 0, 65537, 1114136, 0, 65537, 1114137, 0, 65537, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65537, 1114148, 0, 65537, 1114149, 0, 65537, 1114150, 0, 65537, 1114151, 0, 65537, 1114152, 0, 65541, 1114153, 0, 131074, 1245182, 0, 0, 1245183, 0, 1, 1179648, 0, 1, 1179649, 0, 1, 1179650, 0, 1, 1179651, 0, 1, 1179652, 0, 1, 1179653, 0, 1, 1179654, 0, 1, 1179655, 0, 1, 1179656, 0, 1, 1179657, 0, 1, 1179658, 0, 1, 1179659, 0, 1, 1179660, 0, 1, 1179661, 0, 1, 1179662, 0, 1, 1179663, 0, 131078, 1179664, 0, 65537, 1179665, 0, 65537, 1179666, 0, 65537, 1179667, 0, 65537, 1179668, 0, 65537, 1179669, 0, 65537, 1179670, 0, 65537, 1179671, 0, 65537, 1179672, 0, 65537, 1179673, 0, 65537, 1179674, 0, 65537, 1179675, 0, 65537, 1179676, 0, 65537, 1179677, 0, 65537, 1179678, 0, 65537, 1179679, 0, 65537, 1179680, 0, 65537, 1179681, 0, 65537, 1179682, 0, 65537, 1179683, 0, 65537, 1179684, 0, 65537, 1179685, 0, 65537, 1179686, 0, 65537, 1179687, 0, 65541, 1179688, 0, 131074, 1310718, 0, 65536, 1310719, 0, 65537, 1245184, 0, 65537, 1245185, 0, 65537, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65537, 1245192, 0, 65537, 1245193, 0, 65537, 1245194, 0, 65537, 1245195, 0, 65537, 1245196, 0, 65537, 1245197, 0, 65537, 1245198, 0, 65537, 1245199, 0, 65537, 1245200, 0, 65537, 1245201, 0, 65537, 1245202, 0, 65537, 1245203, 0, 65537, 1245204, 0, 65537, 1245205, 0, 65537, 1245206, 0, 65537, 1245207, 0, 65537, 1245208, 0, 65537, 1245209, 0, 65537, 1245210, 0, 65537, 1245211, 0, 65537, 1245212, 0, 65537, 1245213, 0, 65537, 1245214, 0, 65537, 1245215, 0, 65537, 1245216, 0, 65537, 1245217, 0, 65537, 1245218, 0, 65537, 1245219, 0, 65537, 1245220, 0, 65537, 1245221, 0, 65541, 1245222, 0, 131073, 1245223, 0, 131074, 1376254, 0, 65536, 1376255, 0, 65537, 1310720, 0, 65537, 1310721, 0, 65537, 1310722, 0, 65537, 1310723, 0, 65537, 1310724, 0, 65537, 1310725, 0, 65537, 1310726, 0, 65537, 1310727, 0, 65537, 1310728, 0, 65537, 1310729, 0, 65537, 1310730, 0, 65537, 1310731, 0, 65537, 1310732, 0, 65537, 1310733, 0, 65537, 1310734, 0, 65537, 1310735, 0, 65537, 1310736, 0, 65537, 1310737, 0, 65537, 1310738, 0, 65537, 1310739, 0, 65537, 1310740, 0, 65537, 1310741, 0, 65537, 1310742, 0, 65537, 1310743, 0, 65537, 1310744, 0, 65537, 1310745, 0, 65537, 1310746, 0, 65537, 1310747, 0, 65537, 1310748, 0, 65537, 1310749, 0, 65537, 1310750, 0, 65537, 1310751, 0, 65537, 1310752, 0, 65537, 1310753, 0, 65537, 1310754, 0, 65537, 1310755, 0, 65537, 1310756, 0, 65541, 1310757, 0, 131074, 1441790, 0, 65536, 1441791, 0, 65537, 1376256, 0, 65537, 1376257, 0, 65537, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65537, 1376268, 0, 65537, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 0, 65537, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65537, 1376290, 0, 65537, 1376291, 0, 65541, 1376292, 0, 131074, 1507326, 0, 65536, 1507327, 0, 65537, 1441792, 0, 65537, 1441793, 0, 65537, 1441794, 0, 65537, 1441795, 0, 65537, 1441796, 0, 65537, 1441797, 0, 65537, 1441798, 0, 65537, 1441799, 0, 65537, 1441800, 0, 65537, 1441801, 0, 65537, 1441802, 0, 65537, 1441803, 0, 65537, 1441804, 0, 65537, 1441805, 0, 65537, 1441806, 0, 65537, 1441807, 0, 65537, 1441808, 0, 65537, 1441809, 0, 65537, 1441810, 0, 65537, 1441811, 0, 65537, 1441812, 0, 65537, 1441813, 0, 65537, 1441814, 0, 65537, 1441815, 0, 65537, 1441816, 0, 65537, 1441817, 0, 65537, 1441818, 0, 65537, 1441819, 0, 65537, 1441820, 0, 65537, 1441821, 0, 65537, 1441822, 0, 65537, 1441823, 0, 65537, 1441824, 0, 65537, 1441825, 0, 65537, 1441826, 0, 65537, 1441827, 0, 65538, 1572862, 0, 65536, 1572863, 0, 65537, 1507328, 0, 65537, 1507329, 0, 65537, 1507330, 0, 65537, 1507331, 0, 65537, 1507332, 0, 65537, 1507333, 0, 65537, 1507334, 0, 65537, 1507335, 0, 65537, 1507336, 0, 65537, 1507337, 0, 65537, 1507338, 0, 65537, 1507339, 0, 65537, 1507340, 0, 65537, 1507341, 0, 65537, 1507342, 0, 65537, 1507343, 0, 65537, 1507344, 0, 65537, 1507345, 0, 65537, 1507346, 0, 65537, 1507347, 0, 65537, 1507348, 0, 65537, 1507349, 0, 65537, 1507350, 0, 65537, 1507351, 0, 65537, 1507352, 0, 65537, 1507353, 0, 65537, 1507354, 0, 65537, 1507355, 0, 65537, 1507356, 0, 65537, 1507357, 0, 65537, 1507358, 0, 65537, 1507359, 0, 65537, 1507360, 0, 65537, 1507361, 0, 65537, 1507362, 0, 65541, 1507363, 0, 131074, 1638398, 0, 65536, 1638399, 0, 65537, 1572864, 0, 65537, 1572865, 0, 65537, 1572866, 0, 65537, 1572867, 0, 65537, 1572868, 0, 65537, 1572869, 0, 65537, 1572870, 0, 65537, 1572871, 0, 65537, 1572872, 0, 65537, 1572873, 0, 65537, 1572874, 0, 65537, 1572875, 0, 65537, 1572876, 0, 65537, 1572877, 0, 65537, 1572878, 0, 65537, 1572879, 0, 65537, 1572880, 0, 65537, 1572881, 0, 65537, 1572882, 0, 65537, 1572883, 0, 65537, 1572884, 0, 65537, 1572885, 0, 65537, 1572886, 0, 65537, 1572887, 0, 65537, 1572888, 0, 65537, 1572889, 0, 65537, 1572890, 0, 65537, 1572891, 0, 65537, 1572892, 0, 65537, 1572893, 0, 65537, 1572894, 0, 65537, 1572895, 0, 65537, 1572896, 0, 65541, 1572897, 0, 131073, 1572898, 0, 131074, 1703934, 0, 131072, 1703935, 0, 131073, 1638400, 0, 131073, 1638401, 0, 131073, 1638402, 0, 131073, 1638403, 0, 131073, 1638404, 0, 131073, 1638405, 0, 131073, 1638406, 0, 131073, 1638407, 0, 131073, 1638408, 0, 131073, 1638409, 0, 131073, 1638410, 0, 131073, 1638411, 0, 131073, 1638412, 0, 131073, 1638413, 0, 131073, 1638414, 0, 131073, 1638415, 0, 131073, 1638416, 0, 131073, 1638417, 0, 131073, 1638418, 0, 131073, 1638419, 0, 131073, 1638420, 0, 131073, 1638421, 0, 131073, 1638422, 0, 131073, 1638423, 0, 131073, 1638424, 0, 131073, 1638425, 0, 131073, 1638426, 0, 131073, 1638427, 0, 131073, 1638428, 0, 131073, 1638429, 0, 131073, 1638430, 0, 131073, 1638431, 0, 131073, 1638432, 0, 131074 )

[node name="Player" parent="." index="2" instance=ExtResource( 3 )]
position = Vector2( 50, 256 )

[node name="CutSceneManagerLevel25" type="Node2D" parent="." index="3"]
script = ExtResource( 7 )
dialog = [ "res://UI/Dialog/JSON/0039.EscapePod.JSON", "res://UI/Dialog/JSON/0040.EscapePod.JSON", "res://UI/Dialog/JSON/0041.EscapePod.JSON", "res://UI/Dialog/JSON/0042.EscapePod.JSON" ]

[node name="Trigger" type="Area2D" parent="CutSceneManagerLevel25" index="0"]
position = Vector2( 416, 165 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CutSceneManagerLevel25/Trigger" index="0"]
position = Vector2( 111, -43 )
shape = SubResource( 1 )

[node name="Camera" parent="CutSceneManagerLevel25" index="1" instance=ExtResource( 2 )]
limit_top = 0
limit_right = 1200

[node name="CameraBackground" parent="CutSceneManagerLevel25/Camera" index="6" instance=ExtResource( 1 )]

[node name="Parallax2" parent="CutSceneManagerLevel25/Camera/CameraBackground" index="1"]
visible = false

[node name="Parallax1" parent="CutSceneManagerLevel25/Camera/CameraBackground" index="2"]
visible = false

[node name="Parallax0" parent="CutSceneManagerLevel25/Camera/CameraBackground" index="3"]
motion_scale = Vector2( 0.05, 0.1 )
motion_offset = Vector2( 80, 50 )
motion_mirroring = Vector2( 0, 0 )

[node name="Embers" type="Particles2D" parent="CutSceneManagerLevel25" index="2"]
material = SubResource( 2 )
position = Vector2( -52, 444 )
rotation = 1.21999
amount = 100
lifetime = 8.0
preprocess = 5.0
visibility_rect = Rect2( -600, -2000, 1200, 2000 )
process_material = SubResource( 5 )

[node name="Stopper" parent="CutSceneManagerLevel25" index="3" instance=ExtResource( 4 )]
position = Vector2( 6, 195 )
moveDirection = 1
dialogue = "res://UI/Dialog/JSON/0038.StopperFinal.JSON"

[node name="EscapePod" type="Node2D" parent="CutSceneManagerLevel25" index="4"]
position = Vector2( 450, 132 )

[node name="Body" type="Sprite" parent="CutSceneManagerLevel25/EscapePod" index="0"]
position = Vector2( 141, 79 )
texture = ExtResource( 5 )
hframes = 4
frame = 1

[node name="Inside" type="Sprite" parent="CutSceneManagerLevel25/EscapePod/Body" index="0"]
z_index = -1
texture = ExtResource( 5 )
hframes = 4

[node name="Door" type="Sprite" parent="CutSceneManagerLevel25/EscapePod/Body" index="1"]
position = Vector2( 2.61538, -17.5385 )
texture = ExtResource( 5 )
hframes = 4
frame = 2

[node name="Boost" type="Particles2D" parent="CutSceneManagerLevel25/EscapePod/Body" index="2"]
visible = false
position = Vector2( 9, 27 )
z_index = 1
amount = 6
preprocess = 0.2
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 9 )

[node name="Light2D" type="Light2D" parent="CutSceneManagerLevel25/EscapePod/Body/Boost" index="0"]
texture = ExtResource( 10 )
color = Color( 0.517647, 0.254902, 0.737255, 1 )
energy = 0.8

[node name="Leo" type="Sprite" parent="CutSceneManagerLevel25/EscapePod" index="1"]
position = Vector2( 92, 76 )
z_index = -1
texture = ExtResource( 8 )
hframes = 6

[node name="LeoAnim" type="AnimationPlayer" parent="CutSceneManagerLevel25/EscapePod/Leo" index="0"]
autoplay = "IdleSit"
anims/IdleSit = SubResource( 11 )
anims/IdleStand = SubResource( 12 )
anims/Push = SubResource( 13 )

[node name="Dirt" type="Sprite" parent="CutSceneManagerLevel25" index="5"]
position = Vector2( 590, 211 )
texture = ExtResource( 5 )
hframes = 4
frame = 3

[node name="Spawners" type="Node2D" parent="CutSceneManagerLevel25" index="6"]
position = Vector2( 125, 363 )

[node name="HornetSpawner" parent="CutSceneManagerLevel25/Spawners" index="0" instance=ExtResource( 18 )]
position = Vector2( -28, -92 )

[node name="HornetSpawner2" parent="CutSceneManagerLevel25/Spawners" index="1" instance=ExtResource( 18 )]
position = Vector2( -23, -169 )

[node name="HornetSpawner3" parent="CutSceneManagerLevel25/Spawners" index="2" instance=ExtResource( 18 )]
position = Vector2( 17, -145 )

[node name="HornetSpawner4" parent="CutSceneManagerLevel25/Spawners" index="3" instance=ExtResource( 18 )]
position = Vector2( -20, -234 )

[node name="HornetSpawner5" parent="CutSceneManagerLevel25/Spawners" index="4" instance=ExtResource( 18 )]
position = Vector2( 10, -293 )

[node name="HornetSpawner6" parent="CutSceneManagerLevel25/Spawners" index="5" instance=ExtResource( 18 )]
position = Vector2( 31, -206 )

[node name="HitBox" parent="." index="4" instance=ExtResource( 11 )]
position = Vector2( 307, 426 )
collision_mask = 4
damage = 1000

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 691, -1 )
shape = SubResource( 14 )

[connection signal="body_entered" from="CutSceneManagerLevel25/Trigger" to="CutSceneManagerLevel25" method="_on_Trigger_body_entered"]
[connection signal="animation_finished" from="CutSceneManagerLevel25/EscapePod/Leo/LeoAnim" to="CutSceneManagerLevel25" method="_on_LeoAnim_animation_finished"]

[editable path="CutSceneManagerLevel25/Camera/CameraBackground"]
[editable path="HitBox"]
